--- a/employee/information.html
+++ b/employee/information.html
@@ -55,6 +55,13 @@
 			<div class="container">
 				<div class="col">
 					<div>
+						<label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg input">日期查詢</label>
+                        <div class="col-sm-10">
+                            <input placeholder="輸入範例2025-02-12" id="data" class="form-control form-control-lg input">
+							<p></p>
+                        </div>
+					</div>
+					<div>
 						<table class="table table-bordered table-striped">
 							<tbody>
 								<tr id="year">
