--- a/admin/information.html
+++ b/admin/information.html
@@ -45,6 +45,7 @@
                         <div id="search" >
                             <h1>員工請假資訊</h1>
                             <input placeholder="員工編號" id="code" class="search">
+                            <input placeholder="日期" id="date" class="search">
                             <button id="searching" class="search">搜尋</button>
                         </div>
 
